# 14_BalanceTesHaters

./: .dockerignore  .gitignore  .pre-commit-config.yaml  README.md  binary_classification_prompt_complet.txt  experimentation_classification.py
.github/workflows/: browser-extension.yaml  clever-deployment.yaml  pre-commit.yaml  web-extension.yaml
backend/: README.md  classify_comments.py  compute_annotation_stats.py  configuration.yml  docker-compose.yml  logging.ini  pyproject.toml  run_evals.sh  run_failed_jobs.py  server.py  upload_classification_job_to_noco.py
backend/alembic/: env.py
backend/alembic/versions/: 4dbae3c352ae_create_author_table.py  9e5852fbb8d8_create_classification_job_table.py  9e5852fbb8d8_create_post_and_comment_table.py
backend/balanceteshaters/: classification_task.py
backend/balanceteshaters/classification/: batch_classifier.py  category.py  classification_task.py  embedding_classifier.py  slm_classifier.py
backend/balanceteshaters/data/: predictions_mlk1qcxbyryjq6t_qwen3_1.7b.csv
backend/balanceteshaters/infra/: container.py  settings.py
backend/balanceteshaters/model/: base.py
backend/balanceteshaters/model/repositories/: author.py  classification_job.py  comment.py  post.py
backend/balanceteshaters/routers/: classification_model.py  classification_router.py  ml_model.py  ml_router.py
backend/balanceteshaters/scripts/: binary_classification_prompt_complet.txt  binary_classification_prompt_naif.txt  category_classification_prompt_naif.txt  classification_prompt.txt  compute_annotation_stats.py  evaluate_category_classification.py  evaluate_classification.py  experimentation_category_classification.py  experimentation_classification.py  experimentation_classification_qwen3_7b.py  finetune_BERT.py  upload_classification_job_to_noco.py  upload_classification_job_to_noco_with_context.py
backend/balanceteshaters/scripts/ml/: 00_prepare_dataset.py  01_generate_synthetic.py  02_embed_and_train_classical.py  03_finetune_embedding.py  04_compare_evaluate.py  05_claude_annotate.py  README.md  _eval_subprocess.py  _mlp_arch_search.py  _threshold_sweep.py  config.py  dedup_eval_table.py  models.py
backend/balanceteshaters/services/: annotation.py  author_service.py  nocodb.py
browser-extension/: .clever.json  .env.example  .gitignore  CONTRIBUTING.md  README.md  eslint.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts  vitest.shims.d.ts  wxt.config.ts
browser-extension/.storybook/: main.ts  preview.ts
browser-extension/e2e/: E2E_TESTED_LOCALES.ts  fixtures.ts  flattenComments.ts  instagram-real-page-smoke.spec.ts  instagram-reel-scraping.spec.ts  popup.spec.ts  youtube-shorts-scraping.spec.ts  youtube-video-scraping.spec.ts
data/: Barbara.csv  readme.md  sorted_PREPROCESSED_typhaine_d_24-07-2023-20-09-10.csv
docker/: .env.example  compose-staging.yml
docker/backend/: Dockerfile  run.sh  (+2 more)
docs/: architecture.md  privacy-policy.md
load-testing/: README.md  api-config.js  classification-payloads.js  export.json  k6-out.json  k6-report.html  k6-summary.json  stress-test.js
(+414 files in other folders)
