[project]
name = "balanceteshaters"
version = "0.1.0"
description = "Balance tes haters"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "accelerate>=1.13.0",
    "alembic>=1.17.2",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "bitsandbytes>=0.49.2",
    "colorlog>=6.10.1",
    "dependency-injector[pydantic2]>=4.48.2",
    "fastapi[standard]>=0.122.0",
    "lingua-language-detector>=2.1.1",
    "ollama>=0.6.1",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.44",
    "torch>=2.10.0",
    "tqdm>=4.67.3",
    "transformers>=5.3.0",
    "uuid7>=0.1.0",
    "scikit-learn>=1.8.0",
    "polars>=1.39.0",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
