[project]
name = "balanceteshaters"
version = "0.1.0"
description = "Balance tes haters"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic>=1.17.2",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "colorlog>=6.10.1",
    "dependency-injector[pydantic2]>=4.48.2",
    "fastapi[standard]>=0.122.0",
    "llama-cpp-python>=0.3.0",
    "lingua-language-detector>=2.1.1",
    "ollama>=0.6.1",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.44",
    "tqdm>=4.67.3",
    "uuid7>=0.1.0",
    "scikit-learn>=1.8.0",
    "pandas>=3.0.1",
    "transformers>=5.3.0",
    "torch>=2.11.0",
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "anthropic>=0.50.0",
    "peft>=0.14.0",
    "lightgbm>=4.0.0",
    "sentence-transformers>=3.0.0",
    "datasets>=3.0.0",
    "python-dotenv>=1.0.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# E402: scripts that patch sys.path before project imports (standalone runner pattern)
per-file-ignores = { "balanceteshaters/scripts/**/*.py" = ["E402"] }
