[project]
name = "balanceteshaters"
version = "0.1.0"
description = "Balance tes haters"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic>=1.17.2",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "colorlog>=6.10.1",
    "dependency-injector[pydantic2]>=4.48.2",
    "fastapi[standard]>=0.122.0",
    "lingua-language-detector>=2.1.1",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "sqlalchemy[asyncio]>=2.0.44",
    "tqdm>=4.67.3",
    "uuid7>=0.1.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=3.0.0",
    "huggingface-hub>=0.27.0",
    "torch>=2.0.0",
]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
